Fix horizontal scrolling

--- a/styles/console.less
+++ b/styles/console.less
@@ -41,6 +41,10 @@
     background-color: @inset-panel-background-color;
   }
 
+  .output {
+    position: absolute;
+  }
+
   .hidden {
     display: none;
   }
